[gd_scene load_steps=2 format=3]

[ext_resource type="Script" path="res://Scripts/UI/GhostActionInput.gd" id="1_script"]

[node name="GhostActionInput" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 0
script = ExtResource("1_script")

[node name="Panel" type="Panel" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.0
anchor_right = 0.5
anchor_bottom = 0.0
offset_left = -400.0
offset_top = -180.0
offset_right = 400.0
offset_bottom = -30.0
grow_horizontal = 0
grow_vertical = 0
mouse_filter = 0
z_index = 100

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = -20.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 15

[node name="Label" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Somchai's Turn"
horizontal_alignment = 1

[node name="StatusLabel" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
horizontal_alignment = 1
autowrap_mode = 2

[node name="CharacterList" type="OptionButton" parent="Panel/VBoxContainer"]
layout_mode = 2

[node name="InputField" type="TextEdit" parent="Panel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
custom_minimum_size = Vector2(0, 80)
theme_override_font_sizes/font_size = 18
placeholder_text = "Describe your action..."

[node name="HBoxContainer" type="HBoxContainer" parent="Panel/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 20
alignment = 1

[node name="SubmitBtn" type="Button" parent="Panel/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Submit"

[node name="CancelBtn" type="Button" parent="Panel/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Cancel"

[connection signal="pressed" from="Panel/VBoxContainer/HBoxContainer/SubmitBtn" to="." method="_on_submit_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/HBoxContainer/CancelBtn" to="." method="_on_cancel_pressed"]
